--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Same Day Holiday</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
@@ -16,5 +18,48 @@
           </a>
         </div>
       </nav>
+
+<div class="card-container">
+    <div class="card" style="width: 18rem;">
+        <img src="./img/flying-plane.jpeg" class="card-img-top" alt="A plane flying through the sky">
+        <div class="card-body">
+            <h5 class="card-title">Where would you like to go?</h5>
+            <input class="form-input weather-search" type="text" id="home-input" placeholder="From..."
+                aria-labelledby="form-heading" aria-controls="today forecast" />
+            <input class="form-input weather-search" type="text" id="destination-input" placeholder="To..."
+                aria-labelledby="form-heading" aria-controls="today forecast" />
+          <a href="#" class="btn btn-primary" id="search-button">Let's go!</a>
+        </div>
+      </div>
+</div>
+
+
+
+<div class="container-fluid" id="city-section">
+    <div class="info-container container-md" id="info-container">
+        <div class="city-name">
+            <h3 id="city-name">City Name:</h3>
+            <img id="city-icon" src="" alt="">
+        </div>
+        <div class="city-info">
+            <p id="city-temp">Temperature:</p>
+            <p id="city-feelslike">Feels Like:</p>
+            <div class="weather-and-icon">
+                <p id="city-weather">Weather:</p>
+                <img id="city-icon-two" src="" alt="">
+            </div>
+            <p id="city-windspeed">Windspeed:</p>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid" id="flight-section">
+    <div class="flight-container" id="flight-container">
+        
+    </div>
+</div>
+
+
+<div id="map"></div>
 </body>
 </html>
