updated how the website looks visually

--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Same Day Holiday</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet"> 
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="./img/sun-icon.png" alt="A sun logo icon" width="30" height="30" class="d-inline-block align-text-top">
-            Same Day Holiday
+    <nav class="navbar navbar-light">
+        <div class="container-fluid navbar-container">
+          <a class="navbar-brand text-white ms-5" href="#">
+            <img src="./img/sun-icon-2.png" alt="A sun logo icon" width="30" height="30" class="d-inline-block align-text-top me-3">
+            SAME DAY HOLIDAY
           </a>
+          <img src="./img/saved-icon.png" alt="A saved icon" class="me-5" id="saved-button" >
         </div>
       </nav>
 
@@ -23,12 +30,12 @@
     <div class="card" style="width: 18rem;">
         <img src="./img/flying-plane.jpeg" class="card-img-top" alt="A plane flying through the sky">
         <div class="card-body">
-            <h5 class="card-title">Where would you like to go?</h5>
-            <input class="form-input weather-search" type="text" id="home-input" placeholder="From..."
+            <h5 class="card-title mb-3">Where would you like to go?</h5>
+            <input class="form-input weather-search mb-1" type="text" id="home-input" placeholder="From..."
                 aria-labelledby="form-heading" aria-controls="today forecast" />
-            <input class="form-input weather-search" type="text" id="destination-input" placeholder="To..."
+            <input class="form-input weather-search mb-5" type="text" id="destination-input" placeholder="To..."
                 aria-labelledby="form-heading" aria-controls="today forecast" />
-          <a href="#" class="btn btn-primary" id="search-button">Let's go!</a>
+          <a href=#city-container class="btn btn-primary" id="search-button">Get last minute deals!</a>
         </div>
       </div>
 </div>
@@ -36,25 +43,25 @@
 
 
 <div class="container-fluid" id="city-section">
-    <div class="info-container container-md" id="info-container">
+    <div class="container-md" id="city-container">
         <div class="city-name">
-            <h3 id="city-name">City Name:</h3>
+            <h3 id="city-name"></h3>
             <img id="city-icon" src="" alt="">
         </div>
         <div class="city-info">
-            <p id="city-temp">Temperature:</p>
-            <p id="city-feelslike">Feels Like:</p>
+            <p id="city-temp"></p>
+            <p id="city-feelslike"></p>
             <div class="weather-and-icon">
-                <p id="city-weather">Weather:</p>
+                <p id="city-weather"></p>
                 <img id="city-icon-two" src="" alt="">
             </div>
-            <p id="city-windspeed">Windspeed:</p>
+            <p id="city-windspeed"></p>
         </div>
     </div>
 </div>
 
 <div class="container-fluid" id="flight-section">
-    <div class="flight-container" id="flight-container">
+    <div id="flight-container">
         
     </div>
 </div>
