--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Same Day Holiday</title>
+    <title>Last-Minute-Holiday!</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet"> 
+    
+
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <nav class="navbar navbar-light">
         <div class="container-fluid navbar-container">
           <a class="navbar-brand text-white ms-5" href="#">
             <img src="./img/sun-icon-2.png" alt="A sun logo icon" width="30" height="30" class="d-inline-block align-text-top me-3">
-            SAME DAY HOLIDAY
+            LAST-MINUTE-HOLIDAY!
           </a>
           <img src="./img/saved-icon.png" alt="A saved icon" class="me-5" id="saved-button" >
         </div>
@@ -30,7 +32,7 @@
     <div class="card" style="width: 18rem;">
         <img src="./img/flying-plane.jpeg" class="card-img-top" alt="A plane flying through the sky">
         <div class="card-body">
-            <h5 class="card-title mb-3">Where would you like to go?</h5>
+            <h5 class="card-title mb-3">Which city would you like to go to?</h5>
             <input class="form-input weather-search mb-1" type="text" id="home-input" placeholder="From..."
                 aria-labelledby="form-heading" aria-controls="today forecast" />
             <input class="form-input weather-search mb-5" type="text" id="destination-input" placeholder="To..."
@@ -66,7 +68,37 @@
     </div>
 </div>
 
+<div class="spinner-container" id="spinner-container"></div>
 
-<div id="map"></div>
+<div class="history-container" id="history-container">
+    <h3>Search History</h3>
+    <div id="history-names">
+        
+    </div>
+</div>
+
+<div class="modal" tabindex="-1" id="my-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Invalid entry</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Please enter a valid city.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+<footer class="footer">© Last-Minute-Holiday!</footer>
+
+
+
 </body>
 </html>
