--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          <b>eMail: </b>thomaspg@live.co.uk
+          <br>
+          <b>Phone: </b>+44 7804 466170
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
